# learnopengl

./: .editorconfig  .gitignore  README.md  main.cpp  meson.build
resources/shaders/: shader.fs  shader.vs
src/: main.cpp  shader.cpp  shader.hpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/glfw-3.4/: .gitignore
